// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppInstallModalContent should match a snapshot where an org admin and desktop mode 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <div
        class="el-mb11"
      >
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          As an organisation admin, you have control over 
          enabling
           of ‘
          will-test-dev-co-voracious-person
          ’ for either your Office Group or for 
          <b>
            all
          </b>
           Users and Offices within your Organisation. To do this, you need to visit the
           
          Reapit Connect Management App.
        </p>
        <p
          class="el-text-base el-body-text"
        >
          Desktop Integration
        </p>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          This app requires the following Desktop Integration. Some integration types may replace or change certain behaviours within Agency Cloud.
        </p>
        <div
          class="el-mb6"
        >
          <mock-styled.div>
            Launchable from the applicant screen
          </mock-styled.div>
          <mock-styled.div>
            Provides ability to export a saved applicant to third party system
          </mock-styled.div>
        </div>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          For more information regarding Desktop Integration types, please
           
          <a
            href="https://reapit.atlassian.net/wiki/spaces/RW/pages/2875359379/Desktop+integration+types+AppMarket"
            rel="noopener noreferrer"
            target="_blank"
          >
            click here
          </a>
          .
        </p>
        <p
          class="el-text-base el-body-text"
        >
          Pricing Information
        </p>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          Will Test DevCo
           have specified that there is a cost for using this 
          integration
          , please
           
          <a
            href="https://foo.bar"
            rel="noopener noreferrer"
            target="_blank"
          >
            click here
          </a>
           
          to view their pricing information. You will be billed directly by 
          Will Test DevCo
          .
        </p>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          You will not be charged by Reapit Ltd for any costs associated with using this
           
          integration
          .
        </p>
        <p
          class="el-text-base el-body-text"
        >
          Data Permissions
        </p>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          By 
          enabling
           this app, you are granting the following permissions to your data:
        </p>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          Information about your organisation and the names/email addresses of your users
        </p>
        <mock-styled.div>
          Read applicants
        </mock-styled.div>
        <mock-styled.div>
          Read property images
        </mock-styled.div>
        <mock-styled.div>
          Read properties
        </mock-styled.div>
        <p
          class="el-text-base el-body-text el-has-grey-text el-mt6"
        >
          For more detailed information about App permissions, please
           
          <a
            href="https://foundations-documentation.reapit.cloud/platform-glossary/permissions"
            rel="noopener noreferrer"
            target="_blank"
          >
            click here
          </a>
          .
        </p>
      </div>
      <div
        class="mocked-styled-2 el-button-group"
      >
        <div
          class="el-button-group-align-center el-button-group-inner"
        >
          <button
            class="el-intent-neutral el-button"
          >
            <div
              class="mocked-styled-0 el-button-loader"
            />
            Cancel
          </button>
          <button
            class="el-intent-primary el-button"
            type="button"
          >
            <div
              class="mocked-styled-0 el-button-loader"
            />
            Confirm
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <div
      class="el-mb11"
    >
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        As an organisation admin, you have control over 
        enabling
         of ‘
        will-test-dev-co-voracious-person
        ’ for either your Office Group or for 
        <b>
          all
        </b>
         Users and Offices within your Organisation. To do this, you need to visit the
         
        Reapit Connect Management App.
      </p>
      <p
        class="el-text-base el-body-text"
      >
        Desktop Integration
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        This app requires the following Desktop Integration. Some integration types may replace or change certain behaviours within Agency Cloud.
      </p>
      <div
        class="el-mb6"
      >
        <mock-styled.div>
          Launchable from the applicant screen
        </mock-styled.div>
        <mock-styled.div>
          Provides ability to export a saved applicant to third party system
        </mock-styled.div>
      </div>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        For more information regarding Desktop Integration types, please
         
        <a
          href="https://reapit.atlassian.net/wiki/spaces/RW/pages/2875359379/Desktop+integration+types+AppMarket"
          rel="noopener noreferrer"
          target="_blank"
        >
          click here
        </a>
        .
      </p>
      <p
        class="el-text-base el-body-text"
      >
        Pricing Information
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        Will Test DevCo
         have specified that there is a cost for using this 
        integration
        , please
         
        <a
          href="https://foo.bar"
          rel="noopener noreferrer"
          target="_blank"
        >
          click here
        </a>
         
        to view their pricing information. You will be billed directly by 
        Will Test DevCo
        .
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        You will not be charged by Reapit Ltd for any costs associated with using this
         
        integration
        .
      </p>
      <p
        class="el-text-base el-body-text"
      >
        Data Permissions
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        By 
        enabling
         this app, you are granting the following permissions to your data:
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        Information about your organisation and the names/email addresses of your users
      </p>
      <mock-styled.div>
        Read applicants
      </mock-styled.div>
      <mock-styled.div>
        Read property images
      </mock-styled.div>
      <mock-styled.div>
        Read properties
      </mock-styled.div>
      <p
        class="el-text-base el-body-text el-has-grey-text el-mt6"
      >
        For more detailed information about App permissions, please
         
        <a
          href="https://foundations-documentation.reapit.cloud/platform-glossary/permissions"
          rel="noopener noreferrer"
          target="_blank"
        >
          click here
        </a>
        .
      </p>
    </div>
    <div
      class="mocked-styled-2 el-button-group"
    >
      <div
        class="el-button-group-align-center el-button-group-inner"
      >
        <button
          class="el-intent-neutral el-button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          Cancel
        </button>
        <button
          class="el-intent-primary el-button"
          type="button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          Confirm
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppInstallModalContent should match a snapshot where an org admin and web mode 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <div
        class="el-mb11"
      >
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          As an organisation admin, you have control over 
          enabling
           of ‘
          will-test-dev-co-voracious-person
          ’ for either your Office Group or for 
          <b>
            all
          </b>
           Users and Offices within your Organisation. To do this, you need to visit the
           
          Reapit Connect Management App.
        </p>
        <p
          class="el-text-base el-body-text"
        >
          Desktop Integration
        </p>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          This app requires the following Desktop Integration. Some integration types may replace or change certain behaviours within Agency Cloud.
        </p>
        <div
          class="el-mb6"
        >
          <mock-styled.div>
            Launchable from the applicant screen
          </mock-styled.div>
          <mock-styled.div>
            Provides ability to export a saved applicant to third party system
          </mock-styled.div>
        </div>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          For more information regarding Desktop Integration types, please
           
          <a
            href="https://reapit.atlassian.net/wiki/spaces/RW/pages/2875359379/Desktop+integration+types+AppMarket"
            rel="noopener noreferrer"
            target="_blank"
          >
            click here
          </a>
          .
        </p>
        <p
          class="el-text-base el-body-text"
        >
          Pricing Information
        </p>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          Will Test DevCo
           have specified that there is a cost for using this 
          integration
          , please
           
          <a
            href="https://foo.bar"
            rel="noopener noreferrer"
            target="_blank"
          >
            click here
          </a>
           
          to view their pricing information. You will be billed directly by 
          Will Test DevCo
          .
        </p>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          You will not be charged by Reapit Ltd for any costs associated with using this
           
          integration
          .
        </p>
        <p
          class="el-text-base el-body-text"
        >
          Data Permissions
        </p>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          By 
          enabling
           this app, you are granting the following permissions to your data:
        </p>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          Information about your organisation and the names/email addresses of your users
        </p>
        <mock-styled.div>
          Read applicants
        </mock-styled.div>
        <mock-styled.div>
          Read property images
        </mock-styled.div>
        <mock-styled.div>
          Read properties
        </mock-styled.div>
        <p
          class="el-text-base el-body-text el-has-grey-text el-mt6"
        >
          For more detailed information about App permissions, please
           
          <a
            href="https://foundations-documentation.reapit.cloud/platform-glossary/permissions"
            rel="noopener noreferrer"
            target="_blank"
          >
            click here
          </a>
          .
        </p>
      </div>
      <div
        class="mocked-styled-2 el-button-group"
      >
        <div
          class="el-button-group-align-center el-button-group-inner"
        >
          <button
            class="el-intent-neutral el-button"
          >
            <div
              class="mocked-styled-0 el-button-loader"
            />
            Cancel
          </button>
          <button
            class="el-intent-primary el-button"
            type="button"
          >
            <div
              class="mocked-styled-0 el-button-loader"
            />
            Confirm
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <div
      class="el-mb11"
    >
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        As an organisation admin, you have control over 
        enabling
         of ‘
        will-test-dev-co-voracious-person
        ’ for either your Office Group or for 
        <b>
          all
        </b>
         Users and Offices within your Organisation. To do this, you need to visit the
         
        Reapit Connect Management App.
      </p>
      <p
        class="el-text-base el-body-text"
      >
        Desktop Integration
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        This app requires the following Desktop Integration. Some integration types may replace or change certain behaviours within Agency Cloud.
      </p>
      <div
        class="el-mb6"
      >
        <mock-styled.div>
          Launchable from the applicant screen
        </mock-styled.div>
        <mock-styled.div>
          Provides ability to export a saved applicant to third party system
        </mock-styled.div>
      </div>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        For more information regarding Desktop Integration types, please
         
        <a
          href="https://reapit.atlassian.net/wiki/spaces/RW/pages/2875359379/Desktop+integration+types+AppMarket"
          rel="noopener noreferrer"
          target="_blank"
        >
          click here
        </a>
        .
      </p>
      <p
        class="el-text-base el-body-text"
      >
        Pricing Information
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        Will Test DevCo
         have specified that there is a cost for using this 
        integration
        , please
         
        <a
          href="https://foo.bar"
          rel="noopener noreferrer"
          target="_blank"
        >
          click here
        </a>
         
        to view their pricing information. You will be billed directly by 
        Will Test DevCo
        .
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        You will not be charged by Reapit Ltd for any costs associated with using this
         
        integration
        .
      </p>
      <p
        class="el-text-base el-body-text"
      >
        Data Permissions
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        By 
        enabling
         this app, you are granting the following permissions to your data:
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        Information about your organisation and the names/email addresses of your users
      </p>
      <mock-styled.div>
        Read applicants
      </mock-styled.div>
      <mock-styled.div>
        Read property images
      </mock-styled.div>
      <mock-styled.div>
        Read properties
      </mock-styled.div>
      <p
        class="el-text-base el-body-text el-has-grey-text el-mt6"
      >
        For more detailed information about App permissions, please
         
        <a
          href="https://foundations-documentation.reapit.cloud/platform-glossary/permissions"
          rel="noopener noreferrer"
          target="_blank"
        >
          click here
        </a>
        .
      </p>
    </div>
    <div
      class="mocked-styled-2 el-button-group"
    >
      <div
        class="el-button-group-align-center el-button-group-inner"
      >
        <button
          class="el-intent-neutral el-button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          Cancel
        </button>
        <button
          class="el-intent-primary el-button"
          type="button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          Confirm
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppInstallModalContent should match a snapshot where app is free 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <div
        class="el-mb11"
      >
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          You are about to 
          enable
           ‘
          will-test-dev-co-voracious-person
          ’ for 
          <b>
            all
          </b>
           Users and Offices within your Organisation.
        </p>
        <p
          class="el-text-base el-body-text"
        >
          Desktop Integration
        </p>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          This app requires the following Desktop Integration. Some integration types may replace or change certain behaviours within Agency Cloud.
        </p>
        <div
          class="el-mb6"
        >
          <mock-styled.div>
            Launchable from the applicant screen
          </mock-styled.div>
          <mock-styled.div>
            Provides ability to export a saved applicant to third party system
          </mock-styled.div>
        </div>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          For more information regarding Desktop Integration types, please
           
          <a
            href="https://reapit.atlassian.net/wiki/spaces/RW/pages/2875359379/Desktop+integration+types+AppMarket"
            rel="noopener noreferrer"
            target="_blank"
          >
            click here
          </a>
          .
        </p>
        <p
          class="el-text-base el-body-text"
        >
          Pricing Information
        </p>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          Will Test DevCo
           have specified there is no cost for using this 
          integration
          .
        </p>
        <p
          class="el-text-base el-body-text"
        >
          Data Permissions
        </p>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          By 
          enabling
           this app, you are granting the following permissions to your data:
        </p>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          Information about your organisation and the names/email addresses of your users
        </p>
        <mock-styled.div>
          Read applicants
        </mock-styled.div>
        <mock-styled.div>
          Read property images
        </mock-styled.div>
        <mock-styled.div>
          Read properties
        </mock-styled.div>
        <p
          class="el-text-base el-body-text el-has-grey-text el-mt6"
        >
          For more detailed information about App permissions, please
           
          <a
            href="https://foundations-documentation.reapit.cloud/platform-glossary/permissions"
            rel="noopener noreferrer"
            target="_blank"
          >
            click here
          </a>
          .
        </p>
      </div>
      <div
        class="mocked-styled-2 el-button-group"
      >
        <div
          class="el-button-group-align-center el-button-group-inner"
        >
          <button
            class="el-intent-neutral el-button"
          >
            <div
              class="mocked-styled-0 el-button-loader"
            />
            Cancel
          </button>
          <button
            class="el-intent-primary el-button"
            type="button"
          >
            <div
              class="mocked-styled-0 el-button-loader"
            />
            Confirm
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <div
      class="el-mb11"
    >
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        You are about to 
        enable
         ‘
        will-test-dev-co-voracious-person
        ’ for 
        <b>
          all
        </b>
         Users and Offices within your Organisation.
      </p>
      <p
        class="el-text-base el-body-text"
      >
        Desktop Integration
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        This app requires the following Desktop Integration. Some integration types may replace or change certain behaviours within Agency Cloud.
      </p>
      <div
        class="el-mb6"
      >
        <mock-styled.div>
          Launchable from the applicant screen
        </mock-styled.div>
        <mock-styled.div>
          Provides ability to export a saved applicant to third party system
        </mock-styled.div>
      </div>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        For more information regarding Desktop Integration types, please
         
        <a
          href="https://reapit.atlassian.net/wiki/spaces/RW/pages/2875359379/Desktop+integration+types+AppMarket"
          rel="noopener noreferrer"
          target="_blank"
        >
          click here
        </a>
        .
      </p>
      <p
        class="el-text-base el-body-text"
      >
        Pricing Information
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        Will Test DevCo
         have specified there is no cost for using this 
        integration
        .
      </p>
      <p
        class="el-text-base el-body-text"
      >
        Data Permissions
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        By 
        enabling
         this app, you are granting the following permissions to your data:
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        Information about your organisation and the names/email addresses of your users
      </p>
      <mock-styled.div>
        Read applicants
      </mock-styled.div>
      <mock-styled.div>
        Read property images
      </mock-styled.div>
      <mock-styled.div>
        Read properties
      </mock-styled.div>
      <p
        class="el-text-base el-body-text el-has-grey-text el-mt6"
      >
        For more detailed information about App permissions, please
         
        <a
          href="https://foundations-documentation.reapit.cloud/platform-glossary/permissions"
          rel="noopener noreferrer"
          target="_blank"
        >
          click here
        </a>
        .
      </p>
    </div>
    <div
      class="mocked-styled-2 el-button-group"
    >
      <div
        class="el-button-group-align-center el-button-group-inner"
      >
        <button
          class="el-intent-neutral el-button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          Cancel
        </button>
        <button
          class="el-intent-primary el-button"
          type="button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          Confirm
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppInstallModalContent should match a snapshot where has off grouping, not an org admin 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <div
        class="el-mb11"
      >
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          You are about to 
          enable
           ‘
          will-test-dev-co-voracious-person
          ’ for your Office Group
           
          MOCK_OFFICE_GROUP
        </p>
        <p
          class="el-text-base el-body-text"
        >
          Desktop Integration
        </p>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          This app requires the following Desktop Integration. Some integration types may replace or change certain behaviours within Agency Cloud.
        </p>
        <div
          class="el-mb6"
        >
          <mock-styled.div>
            Launchable from the applicant screen
          </mock-styled.div>
          <mock-styled.div>
            Provides ability to export a saved applicant to third party system
          </mock-styled.div>
        </div>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          For more information regarding Desktop Integration types, please
           
          <a
            href="https://reapit.atlassian.net/wiki/spaces/RW/pages/2875359379/Desktop+integration+types+AppMarket"
            rel="noopener noreferrer"
            target="_blank"
          >
            click here
          </a>
          .
        </p>
        <p
          class="el-text-base el-body-text"
        >
          Pricing Information
        </p>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          Will Test DevCo
           have specified that there is a cost for using this 
          integration
          , please
           
          <a
            href="https://foo.bar"
            rel="noopener noreferrer"
            target="_blank"
          >
            click here
          </a>
           
          to view their pricing information. You will be billed directly by 
          Will Test DevCo
          .
        </p>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          You will not be charged by Reapit Ltd for any costs associated with using this
           
          integration
          .
        </p>
        <p
          class="el-text-base el-body-text"
        >
          Data Permissions
        </p>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          By 
          enabling
           this app, you are granting the following permissions to your data:
        </p>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          Information about your organisation and the names/email addresses of your users
        </p>
        <mock-styled.div>
          Read applicants
        </mock-styled.div>
        <mock-styled.div>
          Read property images
        </mock-styled.div>
        <mock-styled.div>
          Read properties
        </mock-styled.div>
        <p
          class="el-text-base el-body-text el-has-grey-text el-mt6"
        >
          For more detailed information about App permissions, please
           
          <a
            href="https://foundations-documentation.reapit.cloud/platform-glossary/permissions"
            rel="noopener noreferrer"
            target="_blank"
          >
            click here
          </a>
          .
        </p>
      </div>
      <div
        class="mocked-styled-2 el-button-group"
      >
        <div
          class="el-button-group-align-center el-button-group-inner"
        >
          <button
            class="el-intent-neutral el-button"
          >
            <div
              class="mocked-styled-0 el-button-loader"
            />
            Cancel
          </button>
          <button
            class="el-intent-primary el-button"
            type="button"
          >
            <div
              class="mocked-styled-0 el-button-loader"
            />
            Confirm
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <div
      class="el-mb11"
    >
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        You are about to 
        enable
         ‘
        will-test-dev-co-voracious-person
        ’ for your Office Group
         
        MOCK_OFFICE_GROUP
      </p>
      <p
        class="el-text-base el-body-text"
      >
        Desktop Integration
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        This app requires the following Desktop Integration. Some integration types may replace or change certain behaviours within Agency Cloud.
      </p>
      <div
        class="el-mb6"
      >
        <mock-styled.div>
          Launchable from the applicant screen
        </mock-styled.div>
        <mock-styled.div>
          Provides ability to export a saved applicant to third party system
        </mock-styled.div>
      </div>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        For more information regarding Desktop Integration types, please
         
        <a
          href="https://reapit.atlassian.net/wiki/spaces/RW/pages/2875359379/Desktop+integration+types+AppMarket"
          rel="noopener noreferrer"
          target="_blank"
        >
          click here
        </a>
        .
      </p>
      <p
        class="el-text-base el-body-text"
      >
        Pricing Information
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        Will Test DevCo
         have specified that there is a cost for using this 
        integration
        , please
         
        <a
          href="https://foo.bar"
          rel="noopener noreferrer"
          target="_blank"
        >
          click here
        </a>
         
        to view their pricing information. You will be billed directly by 
        Will Test DevCo
        .
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        You will not be charged by Reapit Ltd for any costs associated with using this
         
        integration
        .
      </p>
      <p
        class="el-text-base el-body-text"
      >
        Data Permissions
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        By 
        enabling
         this app, you are granting the following permissions to your data:
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        Information about your organisation and the names/email addresses of your users
      </p>
      <mock-styled.div>
        Read applicants
      </mock-styled.div>
      <mock-styled.div>
        Read property images
      </mock-styled.div>
      <mock-styled.div>
        Read properties
      </mock-styled.div>
      <p
        class="el-text-base el-body-text el-has-grey-text el-mt6"
      >
        For more detailed information about App permissions, please
         
        <a
          href="https://foundations-documentation.reapit.cloud/platform-glossary/permissions"
          rel="noopener noreferrer"
          target="_blank"
        >
          click here
        </a>
        .
      </p>
    </div>
    <div
      class="mocked-styled-2 el-button-group"
    >
      <div
        class="el-button-group-align-center el-button-group-inner"
      >
        <button
          class="el-intent-neutral el-button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          Cancel
        </button>
        <button
          class="el-intent-primary el-button"
          type="button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          Confirm
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppInstallModalContent should match a snapshot where not free but no pricing details 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <div
        class="el-mb11"
      >
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          You are about to 
          enable
           ‘
          will-test-dev-co-voracious-person
          ’ for 
          <b>
            all
          </b>
           Users and Offices within your Organisation.
        </p>
        <p
          class="el-text-base el-body-text"
        >
          Desktop Integration
        </p>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          This app requires the following Desktop Integration. Some integration types may replace or change certain behaviours within Agency Cloud.
        </p>
        <div
          class="el-mb6"
        >
          <mock-styled.div>
            Launchable from the applicant screen
          </mock-styled.div>
          <mock-styled.div>
            Provides ability to export a saved applicant to third party system
          </mock-styled.div>
        </div>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          For more information regarding Desktop Integration types, please
           
          <a
            href="https://reapit.atlassian.net/wiki/spaces/RW/pages/2875359379/Desktop+integration+types+AppMarket"
            rel="noopener noreferrer"
            target="_blank"
          >
            click here
          </a>
          .
        </p>
        <p
          class="el-text-base el-body-text"
        >
          Pricing Information
        </p>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          There may be a cost associated to using this 
          integration
          . However, this information has not yet been provided by 
          Will Test DevCo
          . Please contact 
          Will Test DevCo
           directly for information about pricing.
        </p>
        <p
          class="el-text-base el-body-text"
        >
          Data Permissions
        </p>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          By 
          enabling
           this app, you are granting the following permissions to your data:
        </p>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          Information about your organisation and the names/email addresses of your users
        </p>
        <mock-styled.div>
          Read applicants
        </mock-styled.div>
        <mock-styled.div>
          Read property images
        </mock-styled.div>
        <mock-styled.div>
          Read properties
        </mock-styled.div>
        <p
          class="el-text-base el-body-text el-has-grey-text el-mt6"
        >
          For more detailed information about App permissions, please
           
          <a
            href="https://foundations-documentation.reapit.cloud/platform-glossary/permissions"
            rel="noopener noreferrer"
            target="_blank"
          >
            click here
          </a>
          .
        </p>
      </div>
      <div
        class="mocked-styled-2 el-button-group"
      >
        <div
          class="el-button-group-align-center el-button-group-inner"
        >
          <button
            class="el-intent-neutral el-button"
          >
            <div
              class="mocked-styled-0 el-button-loader"
            />
            Cancel
          </button>
          <button
            class="el-intent-primary el-button"
            type="button"
          >
            <div
              class="mocked-styled-0 el-button-loader"
            />
            Confirm
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <div
      class="el-mb11"
    >
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        You are about to 
        enable
         ‘
        will-test-dev-co-voracious-person
        ’ for 
        <b>
          all
        </b>
         Users and Offices within your Organisation.
      </p>
      <p
        class="el-text-base el-body-text"
      >
        Desktop Integration
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        This app requires the following Desktop Integration. Some integration types may replace or change certain behaviours within Agency Cloud.
      </p>
      <div
        class="el-mb6"
      >
        <mock-styled.div>
          Launchable from the applicant screen
        </mock-styled.div>
        <mock-styled.div>
          Provides ability to export a saved applicant to third party system
        </mock-styled.div>
      </div>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        For more information regarding Desktop Integration types, please
         
        <a
          href="https://reapit.atlassian.net/wiki/spaces/RW/pages/2875359379/Desktop+integration+types+AppMarket"
          rel="noopener noreferrer"
          target="_blank"
        >
          click here
        </a>
        .
      </p>
      <p
        class="el-text-base el-body-text"
      >
        Pricing Information
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        There may be a cost associated to using this 
        integration
        . However, this information has not yet been provided by 
        Will Test DevCo
        . Please contact 
        Will Test DevCo
         directly for information about pricing.
      </p>
      <p
        class="el-text-base el-body-text"
      >
        Data Permissions
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        By 
        enabling
         this app, you are granting the following permissions to your data:
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        Information about your organisation and the names/email addresses of your users
      </p>
      <mock-styled.div>
        Read applicants
      </mock-styled.div>
      <mock-styled.div>
        Read property images
      </mock-styled.div>
      <mock-styled.div>
        Read properties
      </mock-styled.div>
      <p
        class="el-text-base el-body-text el-has-grey-text el-mt6"
      >
        For more detailed information about App permissions, please
         
        <a
          href="https://foundations-documentation.reapit.cloud/platform-glossary/permissions"
          rel="noopener noreferrer"
          target="_blank"
        >
          click here
        </a>
        .
      </p>
    </div>
    <div
      class="mocked-styled-2 el-button-group"
    >
      <div
        class="el-button-group-align-center el-button-group-inner"
      >
        <button
          class="el-intent-neutral el-button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          Cancel
        </button>
        <button
          class="el-intent-primary el-button"
          type="button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          Confirm
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppInstallModalContent should match a snapshot where not off grouping, not an org admin 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <div
        class="el-mb11"
      >
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          You are about to 
          enable
           ‘
          will-test-dev-co-voracious-person
          ’ for 
          <b>
            all
          </b>
           Users and Offices within your Organisation.
        </p>
        <p
          class="el-text-base el-body-text"
        >
          Desktop Integration
        </p>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          This app requires the following Desktop Integration. Some integration types may replace or change certain behaviours within Agency Cloud.
        </p>
        <div
          class="el-mb6"
        >
          <mock-styled.div>
            Launchable from the applicant screen
          </mock-styled.div>
          <mock-styled.div>
            Provides ability to export a saved applicant to third party system
          </mock-styled.div>
        </div>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          For more information regarding Desktop Integration types, please
           
          <a
            href="https://reapit.atlassian.net/wiki/spaces/RW/pages/2875359379/Desktop+integration+types+AppMarket"
            rel="noopener noreferrer"
            target="_blank"
          >
            click here
          </a>
          .
        </p>
        <p
          class="el-text-base el-body-text"
        >
          Pricing Information
        </p>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          Will Test DevCo
           have specified that there is a cost for using this 
          integration
          , please
           
          <a
            href="https://foo.bar"
            rel="noopener noreferrer"
            target="_blank"
          >
            click here
          </a>
           
          to view their pricing information. You will be billed directly by 
          Will Test DevCo
          .
        </p>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          You will not be charged by Reapit Ltd for any costs associated with using this
           
          integration
          .
        </p>
        <p
          class="el-text-base el-body-text"
        >
          Data Permissions
        </p>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          By 
          enabling
           this app, you are granting the following permissions to your data:
        </p>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          Information about your organisation and the names/email addresses of your users
        </p>
        <mock-styled.div>
          Read applicants
        </mock-styled.div>
        <mock-styled.div>
          Read property images
        </mock-styled.div>
        <mock-styled.div>
          Read properties
        </mock-styled.div>
        <p
          class="el-text-base el-body-text el-has-grey-text el-mt6"
        >
          For more detailed information about App permissions, please
           
          <a
            href="https://foundations-documentation.reapit.cloud/platform-glossary/permissions"
            rel="noopener noreferrer"
            target="_blank"
          >
            click here
          </a>
          .
        </p>
      </div>
      <div
        class="mocked-styled-2 el-button-group"
      >
        <div
          class="el-button-group-align-center el-button-group-inner"
        >
          <button
            class="el-intent-neutral el-button"
          >
            <div
              class="mocked-styled-0 el-button-loader"
            />
            Cancel
          </button>
          <button
            class="el-intent-primary el-button"
            type="button"
          >
            <div
              class="mocked-styled-0 el-button-loader"
            />
            Confirm
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <div
      class="el-mb11"
    >
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        You are about to 
        enable
         ‘
        will-test-dev-co-voracious-person
        ’ for 
        <b>
          all
        </b>
         Users and Offices within your Organisation.
      </p>
      <p
        class="el-text-base el-body-text"
      >
        Desktop Integration
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        This app requires the following Desktop Integration. Some integration types may replace or change certain behaviours within Agency Cloud.
      </p>
      <div
        class="el-mb6"
      >
        <mock-styled.div>
          Launchable from the applicant screen
        </mock-styled.div>
        <mock-styled.div>
          Provides ability to export a saved applicant to third party system
        </mock-styled.div>
      </div>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        For more information regarding Desktop Integration types, please
         
        <a
          href="https://reapit.atlassian.net/wiki/spaces/RW/pages/2875359379/Desktop+integration+types+AppMarket"
          rel="noopener noreferrer"
          target="_blank"
        >
          click here
        </a>
        .
      </p>
      <p
        class="el-text-base el-body-text"
      >
        Pricing Information
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        Will Test DevCo
         have specified that there is a cost for using this 
        integration
        , please
         
        <a
          href="https://foo.bar"
          rel="noopener noreferrer"
          target="_blank"
        >
          click here
        </a>
         
        to view their pricing information. You will be billed directly by 
        Will Test DevCo
        .
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        You will not be charged by Reapit Ltd for any costs associated with using this
         
        integration
        .
      </p>
      <p
        class="el-text-base el-body-text"
      >
        Data Permissions
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        By 
        enabling
         this app, you are granting the following permissions to your data:
      </p>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        Information about your organisation and the names/email addresses of your users
      </p>
      <mock-styled.div>
        Read applicants
      </mock-styled.div>
      <mock-styled.div>
        Read property images
      </mock-styled.div>
      <mock-styled.div>
        Read properties
      </mock-styled.div>
      <p
        class="el-text-base el-body-text el-has-grey-text el-mt6"
      >
        For more detailed information about App permissions, please
         
        <a
          href="https://foundations-documentation.reapit.cloud/platform-glossary/permissions"
          rel="noopener noreferrer"
          target="_blank"
        >
          click here
        </a>
        .
      </p>
    </div>
    <div
      class="mocked-styled-2 el-button-group"
    >
      <div
        class="el-button-group-align-center el-button-group-inner"
      >
        <button
          class="el-intent-neutral el-button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          Cancel
        </button>
        <button
          class="el-intent-primary el-button"
          type="button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          Confirm
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
